SERVER-35527 Ignore session information on the embedded version of mongod

(cherry picked from commit 7070ff68a75f10a906c0b0cdbbf50697ec1372c2)